[package]
name = "gus"
version = "0.1.0"
edition = "2021"

description = "Switch git user easily"
license-file = "LICENSE"
authors = ["Naoya Takenaka <noy@abc-net.jp>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
dirs = "5.0"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
rpassword = "7.3"
anyhow = "1.0"
